# clientity

./: pyproject.toml
docs/: CHANGELOG.md  README.md
src/clientity/: __init__.py  logs.py
src/clientity/core/: __init__.py  client.py  endpoint.py  hints.py
src/clientity/core/adapters/: __init__.py  _aiohttp.py  _httpx.py  _requests.py  base.py
src/clientity/core/grouping/: __init__.py  base.py  namespace.py  resource.py
src/clientity/core/primitives/: __init__.py  bound.py  directives.py  instructions.py  method.py  url.py
src/clientity/core/protocols/: __init__.py  interface.py  located.py  models.py
src/clientity/core/utils/: __init__.py  calls.py  data.py  http.py  misc.py  models.py  typers.py
src/clientity/exc/: __init__.py  base.py  http.py  models.py
tests/: __init__.py  conftest.py  test_respall.py
tests/integration/: __init__.py  test_client.py
tests/unit/: __init__.py  test_adapters.py  test_endpoint.py  test_grouping.py  test_primitives.py  test_utils.py
