[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clientity"
dynamic = ["version"]
description = "rapid http clients"
readme = "docs/README.md"
authors = [
    {name = "Joel Yisrael", email = "schizoprada@gmail.com"}
]
dependencies = [
    "pydantic",
    "loguru"
]

[tool.hatch.version]
path = "src/clientity/__init__.py"

[project.optional-dependencies]
dev = [
    "pytest"
]
engines = [
    "requests",
    "httpx",
    "aiohttp"
]
